# Lanczos-Approximation

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build.txt  build_log.txt  lanczos_log.txt  lanczos_log2.txt  run_log.txt  test_bigfloat_log.txt
include/: BigFloat.h  BigInt.h  lanczos.h
src/: BigFloat.cpp  BigInt.cpp  lanczos.cpp  main.cpp
tests/: test_bigfloat.cpp  test_lanczos.cpp
